--- a/src/styles/scss/partials/_header.resp.scss
+++ b/src/styles/scss/partials/_header.resp.scss
@@ -256,8 +256,8 @@
             }
             
             & > .expand {
+                box-sizing: border-box;
                 flex-basis: 15% !important;
-                // min-width: 10%;
                 text-align: right;
             }
         }
